nerv/main/cluster/apps/luncher-box/backend/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: luncher-box-backend
  namespace: apps
spec:
  parentRefs:
    - name: external
      namespace: networking-system
  hostnames:
    - luncherbox-api.nerv.id
  rules:
    - backendRefs:
        - name: luncher-box-backend
          port: 8080
